--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -40,3 +40,8 @@ models:
     # Applies to all files under models/example/
     example:
       +materialized: table
+
+seeds:
+  my_new_project:
+    +schema: seeds
+    
